syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "AccountCreateContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/Tron.proto";

message AccountCreateContract {
    bytes owner_address = 1;
    bytes account_address = 2;
    AccountType type = 3;
}
